[project]
name = "unstract-platform-service"
version = "0.0.1"
description = "Helps tools interact and retrieve details from the Unstract platform through the Unstract SDK"
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "flask~=3.0.0",
    "peewee~=3.16",
    "psycopg2-binary~=2.9",
    "python-dotenv~=1.0",
    "redis~=5.2.1",
    "cryptography>=41.0.7",
    "requests>=2.31.0",
    "unstract-sdk[gcs, azure, aws]~=0.70.0", # Add version
    "unstract-flags",
]

[tool.uv.sources]
unstract-flags = { path = "../unstract/flags", editable = true }

[dependency-groups]
test = ["pytest>=8.0.1"]
deploy = [
    "gunicorn[gevent]~=23.0",
    # OpenTelemetry for tracing and profiling
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
]

# [project.scripts]
# platform_service = "./entrypoint.sh"
# uv run flask --app unstract.platform_service.run:app run --port 3001
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unstract"]

# [tool.pdm.scripts]
# platform_service.cmd = "./entrypoint.sh"
# platform_service.env_file = ".env"
# platform_service.help = "Runs the Unstract platform service"
