[project]
name = "unstract-prompt-service"
version = "0.0.1"
description = "Unstract's prompt studio helper"
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
# license = {text = "MIT"}

dependencies = [
    "peewee~=3.16",
    "nltk~=3.8",
    "flask~=3.0",
    "llama-index==0.12.8",
    "python-dotenv==1.0.0",
    #ToDo: Temporarily removing the extra dependencies of aws and gcs from unstract-sdk
    #to resolve lock file. Will have to be re-looked into
    "unstract-sdk~=0.70.0",
    "gcsfs==2024.10.0",
    "s3fs==2024.10.0",
    "redis>=5.0.3,<5.3",
    "unstract-core",
    "unstract-flags",
]

[tool.uv.sources]
unstract-flags = { path = "../unstract/flags", editable = true }
unstract-core = { path = "../unstract/core", editable = true }

[dependency-groups]
test = [
    "pytest~=8.0.1",
    "pytest-dotenv==0.5.2",
    "pytest-mock~=3.14.0",
    "python-dotenv==1.0.0",
    "flask-WTF~=1.1",
]
deploy = [
    "gunicorn[gevent]~=23.0",
    # OpenTelemetry for tracing and profiling
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unstract"]

# [tool.pdm.scripts]
# prompt_service.cmd = "flask --app src/unstract/prompt_service/run.py run --port 3003"
# prompt_service.env_file = ".env"
# prompt_service.help = "Runs the Unstract prompt service"
