[project]
name = "unstract-prompt-service"
version = "0.0.1"
description = "Unstract's prompt studio helper"
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
# license = {text = "MIT"}

dependencies = [
    "peewee~=3.16",
    "nltk~=3.8",
    "flask~=3.0",
    "llama-index==0.13.2",
    "python-dotenv==1.0.1",
    "json-repair~=0.42.0",
    "requests>=2.28,<3.0",
    "unstract-sdk[aws,gcs,azure]~=0.78.0",
    "redis>=5.0.3,<5.3",
    "unstract-core",
    "unstract-flags",
    "unstract-sdk1[aws,gcs,azure]",
    # Autogen packages for Vibe Extractor LLM generation
    "autogen-core>=0.4.0",
    "autogen-ext>=0.4.0",
    "autogen-agentchat>=0.4.0",
]

[tool.uv.sources]
unstract-flags = { path = "../unstract/flags", editable = true }
unstract-core = { path = "../unstract/core", editable = true }
unstract-sdk1 = { path = "../unstract/sdk1", editable = true }

[dependency-groups]
test = [
    "pytest~=8.0.1",
    "pytest-dotenv==0.5.2",
    "pytest-mock~=3.14.0",
    "python-dotenv==1.0.1",
    "flask-WTF~=1.1",
]
deploy = [
    "gunicorn~=23.0",
    # OpenTelemetry for tracing and profiling
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
]
dev = ["poethepoet>=0.33.1", "debugpy>=1.8.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unstract"]

[tool.poe]
envfile = ".env"

[tool.poe.tasks.prompt-service]
cmd = "./entrypoint.sh"
help = "Runs the Unstract prompt service (Gunicorn)"

[tool.poe.tasks.prompt-service-flask]
cmd = "uv run flask --app src/unstract/prompt_service/run.py run --port 3003"
help = "Runs the Unstract prompt service (Flask)"
