[project]
name = "unstract-runner"
version = "0.1.0"
description = "Platform to interact with tools [Tool's Docker lifecycle management]"
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
dependencies = [
    "docker==6.1.3",
    "flask~=3.1.0",
    "python-dotenv>=1.0.0",
    "redis~=5.2.1",
    "unstract-core[flask] @ file:///${PROJECT_ROOT}/../unstract/core",
    "unstract-flags @ file:///${PROJECT_ROOT}/../unstract/flags",
]
requires-python = ">=3.9,<3.11.1"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pdm.dev-dependencies]
deploy = [
    "gunicorn[gevent]>=21.2.0",
]

test = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-md-report>=0.6.2",
]
dev = [
    "-e unstract-core[flask] @ file:///${PROJECT_ROOT}/../unstract/core",
]


[tool.pdm.scripts]
# Runs the service with gunicorn
runner.cmd = "./entrypoint.sh"
runner.env_file = ".env"
runner.help = "Runs the Unstract tool runner (Gunicorn)"
# Runs the service with flask
runner-flask.cmd = "flask --app src/unstract/runner/__init__.py run --port 5002"
runner-flask.env_file = ".env"
runner-flask.help = "Runs the Unstract tool runner (Flask)"
# Run tests for this service
test.cmd = "pytest -s -v"
test.env_file = "tests/.env"
test.help = "Runs pytests for the Unstract tool runner"
