[project]
name = "unstract-tool-sidecar"
version = "0.0.2"
description = "Container Side Car for Unstract"
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "redis>=4.5.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.0",
    "unstract-core"
]

[dependency-groups]
deploy = [
    # OpenTelemetry for tracing and profiling
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
]

[tool.uv.sources]
unstract-core = { path = "../unstract/core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unstract"]
