[project]
name = "unstract-worker"
version = "0.1.0"
description = "Platform to interact with tools [Tool's Docker lifecycle management]"
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
dependencies = [
    "docker==6.1.3",
    "flask~=3.0.0",
    "python-dotenv==1.0.0",
    "redis==5.0.1",
    "unstract-core @ file:///${PROJECT_ROOT}/../unstract/core",
    "unstract-flags @ file:///${PROJECT_ROOT}/../unstract/flags",
]
requires-python = ">=3.9,<3.11.1"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pdm.dev-dependencies]
deploy = [
    "gunicorn>=21.2.0",
]

dev = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-md-report>=0.6.2",
]

[tool.pdm.scripts]
# Runs the flask service
runner.cmd = "flask --app src/unstract/worker/main.py run --port 5002"
runner.env_file = ".env"
runner.help = "Runs the Unstract tool runner"
# Run tests for this service
test.cmd = "pytest -s -v"
test.env_file = "tests/.env"
test.help = "Runs pytests for the Unstract tool runner"
