[project]
name = "unstract-x2text-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zipstack inc", email = "devsupport@zipstack.com"},
]
dependencies = [
    "Flask>=3.0.1",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv~=1.0.0",
    "requests>=2.31.0",
    "peewee>=3.17.0",
    "psycopg2-binary~=2.9",
]
requires-python = ">=3.9,<3.11.1"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
deploy = [
    "gunicorn[gevent]~=23.0",
    # OpenTelemetry for tracing and profiling
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-flask",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-distro",
]
