[project]
name = "unstract-x2text-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Zipstack inc", email = "devsupport@zipstack.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "Flask>=3.0.1",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv~=1.0.0",
    "requests>=2.31.0",
    "peewee>=3.17.0",
    "psycopg2-binary~=2.9",
]

[dependency-groups]
deploy = [
    "gunicorn>=21.2.0",
    "opentelemetry-distro~=0.52b1",
    "opentelemetry-exporter-otlp~=1.31.1"
]
