[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "unstract-connectors"
version = "0.0.3"
description = "All connectors that are part of the Unstract platform"
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
dependencies = [
    # For GCSHelper
    "google-auth==2.20.0",
    "google-cloud-secret-manager==2.16.1",
    "google-cloud-storage==2.9.0",
    # Filesystem connectors
    "s3fs[boto3]==2023.6.0", # For Minio
    "PyDrive2[fsspec]==1.15.4", # For GDrive
    "oauth2client==4.1.3", # For GDrive
    "dropboxdrivefs==1.3.1", # For Dropbox
    "boxfs==0.2.1", # For Box
    "gcsfs==2023.6.0", # For GoogleCloudStorage
    "adlfs==2023.8.0", # For AzureCloudStorage
    # Database connectors
    "psycopg2-binary==2.9.9", # For Postgres, Redshift
    "snowflake-connector-python[pandas]~=3.6.0", # For Snowflake
    "google-cloud-bigquery==3.11.4", # For Bigquery
    "pymssql==2.2.8", # For MSSQL
    "PyMySQL==1.1.0" # For MySQL
]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]
license = {text = "MIT"}

[tool.pdm.build]
includes = ["src"]
package-dir = "src"
# source-includes = ["tests"]
