[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "unstract-connectors"
version = "0.0.3"
description = "All connectors that are part of the Unstract platform"
dependencies = [
    # For GCSHelper
    "google-auth==2.20.0",
    "google-cloud-secret-manager==2.16.1",
    "google-cloud-storage==2.9.0",
    # Filesystem connectors
    "s3fs[boto3]==2024.6.0", # For Minio
    "PyDrive2[fsspec]==1.15.4", # For GDrive
    "oauth2client==4.1.3", # For GDrive
    "dropboxdrivefs==1.4.1", # For Dropbox
    "boxfs==0.2.1", # For Box
    "gcsfs==2024.6.0", # For GoogleCloudStorage
    "adlfs==2023.8.0", # For AzureCloudStorage
    # Database connectors
    "psycopg2-binary==2.9.9", # For Postgres, Redshift
    "snowflake-connector-python[pandas]~=3.6.0", # For Snowflake
    "google-cloud-bigquery==3.11.4", # For Bigquery
    "pymssql==2.2.8", # For MSSQL
    "PyMySQL==1.1.0", # For MySQL
    "oracledb==2.4.0", # For OracleDB
]
readme = "README.md"
urls = { Homepage = "https://unstract.com", Source = "https://github.com/Zipstack/unstract/tree/main/unstract/connectors" }
license = {text = "AGPL v3"}
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.pdm.build]
includes = ["src"]
package-dir = "src"
# source-includes = ["tests"]
