[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "unstract-core"
version = "0.0.1"
description = "Core library that helps with executing workflows."
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"}
]
dependencies = [
    "boto3~=1.34.0",
    "botocore~=1.34.0",
    "llama-index==0.10.58",
    "llama-index-llms-azure-openai==0.1.10",
    "redis~=5.0.1",
    "requests==2.31.0",
    "kombu==5.3.7",
]
# <3.11.1 due to resolution error from Unstract SDK
requires-python = ">=3.9,<3.11.1"
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]
# license = {text = "MIT"}

[tool.pdm.build]
includes = ["src"]
package-dir = "src"
# source-includes = ["tests"]
