[project]
name = "unstract-core"
version = "0.0.1"
description = "Core library that helps with executing workflows."
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"}
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]
license = { text = "AGPL v3" }

dependencies = [
    "redis~=5.2.1",
    "requests==2.31.0",
    "kombu~=5.5.3",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
flask = [
    "flask~=3.1.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
