[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "unstract-filesystem"
version = "0.0.1"
description = "Unstract filesystem package"
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
dependencies = [
    "unstract-sdk~=0.60.1",
]
requires-python = ">=3.9,<3.11.1"
readme = "README.md"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pdm.resolution.overrides]
grpcio = "1.62.3"
grpcio-tools = "1.62.3"
grpcio-health-checking = "1.62.3"
