[project]
name = "unstract-filesystem"
version = "0.0.1"
description = "Unstract filesystem package"
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = ["unstract-sdk~=0.70.0"]

# [tool.uv.sources]
# unstract-sdk = { git = "https://github.com/Zipstack/unstract-sdk", branch = "python-upgrade" }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
