[project]
name = "unstract-flags"
version = "0.0.1"
description = "Unstract's feature flags package."
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
#license = {text = "MIT"}
dependencies = ["grpcio-tools<=1.60.0", "grpcio<=1.60.0"]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
