[project]
name = "unstract-flags"
version = "0.0.1"
description = "Unstract's feature flags package."
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
#license = {text = "MIT"}
dependencies = ["flipt-client>=0.1.0"]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
