[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "unstract-metrics"
version = "0.0.1"
description = "Helps with collection of metrics from Unstract's adapters"
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
dependencies = ["elasticsearch-dsl~=8.14.0"]
# <3.11.1 due to resolution error from Unstract SDK
requires-python = ">=3.9,<3.11.1"
readme = "README.md"
classifiers = ["Programming Language :: Python"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-dotenv>=0.5.2",
    "pytest-cov>=5.0.0",
    "pytest-md-report>=0.6.2",
]

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pytest.ini_options]
env_files = ["tests/.env"]
addopts = "-s"
log_level = "INFO"
log_cli = true

[tool.pdm.scripts]
test.cmd = "pytest -s -v"
test.env_file = "tests/.env"
test.help = "Runs pytests for Unstract Metrics"
